# glimmer

./: Cargo.toml  README.md  build.rs
src/: audio.rs  code_display.rs  config.rs  esmerald_theme.json  file_io.rs  function_calling.rs  gemini.rs  input_handler.rs  lsp.rs  main.rs  parser.rs  permissions.rs  progress_display.rs  realtime_display.rs  reasoning_engine.rs  thinking_display.rs
src/backup/src/: code_display.rs  config.rs  differ.rs  file_io.rs  function_calling.rs  gemini.rs  parser.rs  permissions.rs  progress_display.rs  reasoning_engine.rs  research.rs  thinking_display.rs
src/backup/src/cli/: chat.rs  chat_ui.rs  diff.rs  gemini.rs  lsp.rs  parse.rs  permissions.rs  progress.rs
src/cli/: chat.rs  colors.rs  compact.rs  edit.rs  export.rs  memory.rs  mod.rs  watch.rs
