[package]
name = "glimmer"
version = "0.1.0"
edition = "2021"
description = "A CLI code assistant built entirely in Rust"
license = "MIT"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
memmap2 = "0.9.4"
ropey = "1.6.1"
tempfile = "3.10.1"
nom = "7.1.3"
regex = "1.10.5"
aho-corasick = "1.1.3"
tree-sitter = "0.25.8"
tokio = { version = "1.38.0", features = ["full"] }
rayon = "1.10.0"
dashmap = "6.1.0"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.116"
toml = "0.8.12"
reqwest = { version = "0.12.22", features = ["json", "gzip", "blocking", "stream"] }
anyhow = "1.0.98"
similar = "2.3.0"
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lru = "0.12.1"
notify = "6.1.1"
dirs = "5.0.1"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
crossterm = "0.27"
term_size = "0.3"
sled = "0.34.7"
kuchiki = "0.8"
html2text = "0.12"
url = "2.5"
rodio = "0.19"
lazy_static = "1.5"

[build-dependencies]
winres = "0.1"